@@ -1,6 +1,8 @@
 dump1090-fa (3.7.1~dev) UNRELEASED; urgency=medium
 
   * in development
+  * Increase maximum TSV packet size
+  * Fix possible missing \n termination of TSV messages
   * Fix column index to hide distance when site is not shown.
   * Fix getting LAT/LON from piaware .env file.
   * Add accuracy fields and tooltips for ADSB parameters in info block.
